<resources>
    <!-- General -->
    <string name="app_name">Restaurant Order</string>
    <string name="general_dialog_notification_title">Obvestilo</string>
    <string name="general_close">Zapri</string>
    <string name="general_retry">Poskusi znova</string>
    <string name="general_loading">Prosimo, počakajte…</string>
    <string name="general_ok">V redu</string>
    <string name="general_save">Shrani</string>
    <string name="general_cancel">Prekliči</string>
    <string name="general_confirm">Potrdi</string>
    <string name="general_next_step">Naslednji korak</string>

    <!-- Error -->
    <string name="error_general">Prišlo je do nepričakovane napake.</string>
    <string name="error_required_field">Podatek je obvezen</string>
    <string name="error_invalid_email">Email ni pravilne oblike</string>
    <string name="error_invalid_phone_number">Neveljavna telefonska št.</string>
    <string name="error_password_confirmation">Gesli se ne ujemata</string>
    <string name="error_missing_fields">Manjkajoči podatki</string>

    <!-- Placeholders -->
    <string name="placeholder_email">Email</string>
    <string name="placeholder_password">Geslo</string>
    <string name="placeholder_password_current">Trenutno geslo</string>
    <string name="placeholder_password_new">Novo geslo</string>
    <string name="placeholder_password_confirmation">Potrditev gesla</string>
    <string name="placeholder_first_name">Ime</string>
    <string name="placeholder_last_name">Priimek</string>
    <string name="placeholder_delivery_address">Naslov za dostavo</string>
    <string name="placeholder_phone_number">Telefonska št.</string>
    <string name="placeholder_comment">Komentar</string>

    <!-- Loading -->
    <string name="result_loading">Pridobivanje podatkov…</string>
    <string name="result_loading_error">Pri pridobivanju podatkov je prišlo do napake.</string>
    <string name="result_loading_empty">Ni podatkov za prikaz.</string>

    <!-- Categories -->
    <string name="categories_title">Meni</string>

    <!-- Menu item -->
    <string name="menu_item_description">Opis / sestavine</string>
    <string name="menu_item_price">Cena</string>
    <string name="menu_item_comment">Vaše želje</string>
    <string name="menu_item_count">Količina</string>
    <string name="menu_item_no_comment">Ni komentarja.</string>

    <!-- Login -->
    <string name="login">Prijava</string>
    <string name="login_no_account">Še nimate računa?</string>
    <string name="login_register">Registrirajte se</string>
    <string name="login_not_authorized">Napačno uporabniško ime ali geslo</string>
    <string name="logging_in">Prijavljanje…</string>

    <!-- Register -->
    <string name="register">Registracija</string>
    <string name="register_has_account">Že imate račun?</string>
    <string name="register_login">Prijavite se</string>
    <string name="register_conflict">Ta email naslov je že v uporabi</string>
    <string name="register_in_progress">Poteka registracija…</string>
    <string name="register_disclaimer">Z oddajo prijave za registracijo potrjujete, da se strinjate s pogoji uporabe.</string>

    <!-- Reset password -->
    <string name="reset_password">Pozabljeno geslo</string>
    <string name="reset_password_instruction">Izpolnite spodnji obrazec. Novo geslo bo poslano na vaš e-mail naslov.</string>
    <string name="reset_password_send">Pošlji</string>
    <string name="reset_password_not_found">Vnešen email naslov ne obstaja</string>
    <string name="reset_password_success">Na vnešen e-mail naslov je bilo poslano novo geslo, s katerim se lahko prijavite.</string>

    <!-- Dashboard -->
    <string name="dashboard_order">Naroči</string>
    <string name="dashboard_profile">Profil</string>
    <string name="dashboard_login">Prijava</string>
    <string name="dashboard_history">Zgodovina</string>
    <string name="dashboard_about">O restavraciji</string>

    <!-- Profile -->
    <string name="profile_basic_info">Osnovni podatki</string>
    <string name="profile_password_change">Zamenjaj geslo</string>
    <string name="profile_password_change_message">Vnesite vaše staro geslo in želeno novo geslo, ter kliknite Potrdi.</string>
    <string name="profile_change_password_incorrect_old">Trenutno geslo ni pravilno</string>
    <string name="profile_change_password_success">Uspešno ste spremenili geslo.</string>
    <string name="profile_addresses">Naslovi za dostavo</string>
    <string name="profile_addresses_message">Naslove za dostavo lahko po želji dodajate in odstranjujete. Izberite privzeti naslov za hitrejše naročilo.</string>
    <string name="profile_addresses_edit">Uredi naslove</string>
    <string name="profile_update_success">Podatki so bili uspešno posodobljeni.</string>
    <string name="profile_logout">Izpis</string>

    <!-- Address -->
    <string name="addresses_title">Naslovi za dostavo</string>
    <string name="address_notes">Dodatne opombe</string>
    <string name="address_add_title">Dodajte naslov</string>
    <string name="address_add_message">Vnesite še morebitne dodatne opombe za dostavljalca in pritisnite gumb shrani.</string>
    <string name="address_add_default">Nastavi kot privzeti naslov</string>

    <!-- Shopping car -->
    <string name="shopping_cart_title">Vsebina naročila</string>
    <string name="shopping_cart_empty">Vaše naročilo je prazno.</string>
    <string name="shopping_cart_total">Skupaj za plačilo: </string>

    <!-- Send order -->
    <string name="send_order">Oddaj naročilo</string>
    <string name="send_order_comment">Dodatna navodila/komentarji</string>
    <string name="send_order_not_logged_in">Za oddajo naročila se morate prijaviti.</string>
    <string name="send_order_no_address_selected">Izbrati morate naslov za dostavo.</string>
    <string name="send_order_no_addresses">Shranjenega nimate nobenega naslova za dostavo.\nNaslove lahko urejate v profilu.</string>
    <string name="send_order_success_toolbar_title">Naročilo odddano</string>
    <string name="send_order_success_title">Naročilo uspešno oddano</string>
    <string name="send_order_success_message">Naročilo je bilo uspešno oddano in je v čakalni vrsti.\nStanje naročila lahko spremljate v zgodovini naročil.</string>

    <!-- About -->
    <string name="about_title">O restavraciji</string>
    <string name="about_description">Restaurant Order je prototip aplikacije za naročanje hrane na dom. Aplikacija je namenjena manjšim restavracijam oz. pizzerijam, ki naročila še vedno sprejemajo preko telefona.</string>
    <string name="about_author">Razvijalec: Domen Lanišnik</string>

    <!-- History -->
    <string name="history_title">Zgodovina naročil</string>
    <string name="history_items_count">Število jedi: %d</string>

    <string name="order_status_created">Ustvarjen</string>
    <string name="order_status_confirmed">Potrjen</string>
    <string name="order_status_rejected">Zavrnjen</string>
    <string name="order_status_in_progress">V izvajanju</string>
    <string name="order_status_ready">Pripravljen za dostavo</string>
    <string name="order_status_finished">Zaključen</string>
    <string name="order_status_cancelled">Preklican</string>

    <string name="order_detail_title">Podrobnosti naročila</string>
    <string name="order_detail_created_title">Ustvarjeno</string>
    <string name="order_detail_status_history_title">Zgodovina statusov</string>
    <string name="order_detail_total_title">Skupaj za plačilo</string>
    <string name="order_detail_address_title">Naslov za dostavo</string>
    <string name="order_detail_items_title">Izbrane jedi</string>
    <string name="order_detail_comment_title">Komentar</string>

</resources>
