<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <Button
        android:id="@+id/successCloseButton"
        style="@style/DefaultButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/space_large"
        android:text="@string/general_ok" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/successCloseButton"
        android:layout_below="@id/toolbar"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/space_large"
        android:layout_marginStart="@dimen/space_large"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_normal"
            android:src="@drawable/img_success" />

        <TextView
            style="@style/DefaultTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_normal"
            android:gravity="center"
            android:text="@string/send_order_success_title"
            android:textAllCaps="true" />

        <TextView
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/send_order_success_message" />
    </LinearLayout>


</RelativeLayout>