<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="@dimen/space_large">

            <android.support.constraint.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <android.support.constraint.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <!-- Basic info -->

            <TextView
                android:id="@+id/profileBasicInfoTitle"
                style="@style/DefaultTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_basic_info"
                android:textAllCaps="true"
                app:layout_constraintStart_toEndOf="@id/guidelineStart"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profileFirstNameInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:hint="@string/placeholder_first_name"
                app:layout_constraintEnd_toStartOf="@+id/profileLastNameInputLayout"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/profileBasicInfoTitle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profileFirstNameEditText"
                    style="@style/DefaultText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profileLastNameInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_normal"
                android:layout_marginTop="@dimen/space_normal"
                android:hint="@string/placeholder_last_name"
                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                app:layout_constraintStart_toEndOf="@+id/profileFirstNameInputLayout"
                app:layout_constraintTop_toBottomOf="@id/profileBasicInfoTitle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profileLastNameEditText"
                    style="@style/DefaultText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profileEmailInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:hint="@string/placeholder_email"
                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                app:layout_constraintStart_toEndOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/profileLastNameInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profileEmailEditText"
                    style="@style/DefaultText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profilePhoneNumberInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:hint="@string/placeholder_phone_number"
                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                app:layout_constraintStart_toEndOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/profileEmailInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profilePhoneNumberEditText"
                    style="@style/DefaultText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/profileInfoCancelButton"
                style="@style/DefaultButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:text="@string/general_cancel"
                app:layout_constraintEnd_toStartOf="@+id/profileInfoSaveButton"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/profilePhoneNumberInputLayout" />

            <Button
                android:id="@+id/profileInfoSaveButton"
                style="@style/DefaultButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_large"
                android:layout_marginTop="@dimen/space_normal"
                android:text="@string/general_save"
                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                app:layout_constraintStart_toEndOf="@id/profileInfoCancelButton"
                app:layout_constraintTop_toBottomOf="@id/profilePhoneNumberInputLayout" />


            <!-- Password -->

            <TextView
                android:id="@+id/profilePasswordTitle"
                style="@style/DefaultTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:text="@string/profile_password_change"
                android:textAllCaps="true"
                app:layout_constraintStart_toEndOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/profileInfoSaveButton" />

            <TextView
                android:id="@+id/profilePasswordInstruction"
                style="@style/DefaultLightText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:text="@string/profile_password_change_message"
                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                app:layout_constraintStart_toEndOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/profilePasswordTitle" />

            <Button
                android:id="@+id/profilePasswordChangeButton"
                style="@style/DefaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:paddingEnd="@dimen/space_large"
                android:paddingStart="@dimen/space_large"
                android:text="@string/profile_password_change"
                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                app:layout_constraintStart_toEndOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/profilePasswordInstruction" />

            <!-- Address -->

            <TextView
                android:id="@+id/profileAddressTitle"
                style="@style/DefaultTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:text="@string/profile_addresses"
                android:textAllCaps="true"
                app:layout_constraintStart_toEndOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/profilePasswordChangeButton" />

            <TextView
                android:id="@+id/profileAddressInstruction"
                style="@style/DefaultLightText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:text="@string/profile_addresses_message"
                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                app:layout_constraintStart_toEndOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/profileAddressTitle" />

            <Button
                android:id="@+id/profileAddressOpenButton"
                style="@style/DefaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:paddingEnd="@dimen/space_large"
                android:paddingStart="@dimen/space_large"
                android:text="@string/profile_addresses_edit"
                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                app:layout_constraintStart_toEndOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/profileAddressInstruction" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <si.lanisnik.restaurantorder.ui.base.views.LoadingStateView
        android:id="@+id/profileLoadingStateView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_below="@id/toolbar"
        tools:visibility="gone" />

</RelativeLayout>