<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_large">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loginEmailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder_email"
        app:layout_constraintBottom_toTopOf="@+id/loginPasswordInputLayout"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginEmailEditText"
            style="@style/DefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loginPasswordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_large"
        android:hint="@string/placeholder_password"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginPasswordEditText"
            style="@style/DefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/DefaultButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_large"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/loginRegisterText"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordInputLayout" />

    <TextView
        android:id="@+id/loginNoAccountText"
        style="@style/DefaultLightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/space_small"
        android:paddingStart="@dimen/space_small"
        android:text="@string/login_no_account"
        app:layout_constraintBottom_toBottomOf="@+id/loginRegisterText"
        app:layout_constraintEnd_toStartOf="@+id/loginRegisterText"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/loginRegisterText" />

    <TextView
        android:id="@+id/loginRegisterText"
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/space_small"
        android:text="@string/login_register"
        android:textColor="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/loginNoAccountText"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />


</android.support.constraint.ConstraintLayout>