<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_large">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/addAddressInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder_delivery_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/addAddressEditText"
            style="@style/DefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textPostalAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/addAddressNoteInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:hint="@string/address_notes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addAddressInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/addAddressNoteEditText"
            style="@style/DefaultText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:inputType="textNoSuggestions" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/addAddressDefaultCheckBox"
        style="@style/DefaultLightText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_normal"
        android:text="@string/address_add_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addAddressNoteInputLayout" />


</android.support.constraint.ConstraintLayout>